refactor(agent): propagate retrieval evidence through tool context
Make VectorSearchTool a thin pipeline adapter and replace vector citation ThreadLocal state with per-request RetrievalResults. Preserve tool response shapes and agent-controlled retrieval. Exercise callback propagation, cross-thread citation isolation, and the pgvector-backed chat flow.